fixed currency width on mobile

--- a/packages/frontend/src/components/currency/currency.scss
+++ b/packages/frontend/src/components/currency/currency.scss
@@ -12,7 +12,7 @@
   background-repeat: no-repeat;
   background-position: bottom;
 
-  @media (min-width: 500px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 767px) {
     width: 100%;
     background-size: contain;
     background-image: url('../../assets/icons/wave-tablet.svg');
